[gd_scene load_steps=19 format=2]

[ext_resource path="res://Game/Levels/Pseudocode/Cap4Theory.gd" type="Script" id=1]
[ext_resource path="res://Game/Pets/AnyPet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Levels/TheoryTemplate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Levels/Pseudocode/AnimElements/Pseudocode.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "anim1"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

resource_name = "anim10"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

resource_name = "anim11"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=10]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=13]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=14]

length = 1.0
loop = false
step = 0.1

[node name="Cap4Theory" type="Node" index="0"]
script = ExtResource( 1 )

[node name="AnyPet" parent="." index="0" instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 608, 352 )
scale = Vector2( 0.7, 0.7 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="TheoryTemplate" parent="." index="1" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="Anim" type="AnimationPlayer" parent="." index="2"]
root_node = NodePath("..")
autoplay = "anim1"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/anim1 = SubResource( 1 )
anims/anim10 = SubResource( 2 )
anims/anim11 = SubResource( 3 )
anims/anim12 = SubResource( 4 )
anims/anim13 = SubResource( 5 )
anims/anim14 = SubResource( 6 )
anims/anim2 = SubResource( 7 )
anims/anim3 = SubResource( 8 )
anims/anim4 = SubResource( 9 )
anims/anim5 = SubResource( 10 )
anims/anim6 = SubResource( 11 )
anims/anim7 = SubResource( 12 )
anims/anim8 = SubResource( 13 )
anims/anim9 = SubResource( 14 )
blend_times = [  ]

[node name="Pseudocode" parent="." index="3" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 1312, 112 )

[node name="Background" parent="Pseudocode" index="0"]
margin_bottom = 288.0

[node name="Text" parent="Pseudocode" index="1"]
bbcode_text = "int edad = 30
string nombre

printLine(\"Mi edad es {edad}\")
printLine(\"y tu nombre es: \")
nombre = getString()
printLine(\"Tu nombre es {nombre}\")"
text = "int edad = 30
string nombre

printLine(\"Mi edad es {edad}\")
printLine(\"y tu nombre es: \")
nombre = getString()
printLine(\"Tu nombre es {nombre}\")"

[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="." method="_on_RPGDialog_changed_text"]
[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="TheoryTemplate" method="_on_RPGDialog_changed_text"]
[connection signal="animation_finished" from="TheoryTemplate/Anim" to="." method="_on_Anim_animation_finished"]

[editable path="AnyPet"]

[editable path="TheoryTemplate"]

[editable path="Pseudocode"]
